<resources>
    <string name="rss_url" translatable="false">http://feeds.feedburner.com/TheDailyNewsOfOpenWaterSwimming</string>
    <string name="preferences_file" translatable="false">com.beoni.openwaterswimtracking.preferences</string>
    <string name="date_format_default" translatable="false">dd/mm/yyyy</string>

    <string name="app_name">Open Water Swim Tracking</string>
    <string name="rss_activity_label">Open Water News</string>
    <string name="swim_activity_label">Swim Track</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_connection">Looks like you are not connected</string>
    <string name="btn_show_swim_list">Don\'t care, show Swim Track</string>
    <string name="menu_add_swim">Add New Swim</string>
    <string name="btn_know_more">Read More</string>
    <string name="menu_backup">Backup/Restore swim tracks with Google Cloud</string>
    <string name="no_swim">Looks like you don\'t have any swim yet</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="edit_swim_activity_label">Swim Data</string>
    <string name="menu_save_swim">Save Swim</string>
    <string name="menu_delete_swim">Delete Swim</string>
    <string name="swim_title_hint">Title (*)</string>
    <string name="swim_notes_hint">Notes</string>
    <string name="swim_date_hint">When (*)</string>
    <string name="swim_location_hint">Spot (*)</string>
    <string name="swim_duration">Duration (* minutes)</string>
    <string name="swim_duration_label_hours">&#160;h&#160;&#160;</string>
    <string name="swim_duration_label_minutes">&#160;m</string>
    <string name="swim_length">Distance (* meters)</string>
    <string name="swim_length_label">&#160;meters</string>
    <string name="swim_temperature">Perceived Temperature</string>
    <string-array name="temperature_values">
        <item>Really cold</item>
        <item>Cold</item>
        <item>Quite cold</item>
        <item>Regular</item>
        <item>Quite warm</item>
        <item>Warm</item>
        <item>Too warm</item>
    </string-array>
    <string-array name="temperature_colors">
        <item>#01579B</item>
        <item>#03A9F4</item>
        <item>#B3E5FC</item>
        <item>#00C853</item>
        <item>#FFE082</item>
        <item>#FFC107</item>
        <item>#FF6F00</item>
    </string-array>
    <string name="swim_waves">Waves</string>
    <string-array name="waves_values">
        <item>Flat water</item>
        <item>Choppy</item>
        <item>Small waves</item>
    </string-array>
    <string-array name="waves_icons">
        <item>flat</item>
        <item>choppy</item>
        <item>waves</item>
    </string-array>
    <string name="swim_flow">Flow</string>
    <string-array name="flow_values">
        <item>None</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Strong</item>
    </string-array>
    <string-array name="flow_icons">
        <item>noflow</item>
        <item>lowflow</item>
        <item>mediumflow</item>
        <item>highflow</item>
    </string-array>
    <string name="swim_title_validate">Title is required</string>
    <string name="swim_date_validate">When is required</string>
    <string name="swim_location_validate">Spot is required</string>
    <string name="cannot_delete_new_swim">Swim cannot be deleted since it\'s not save yet</string>
    <string name="swim_invalid">Please fill all required swim data</string>
    <string name="loading">Loading...</string>
    <string name="google_title_text">Login with Google</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="label_google_sign_in">Sign In with Google</string>
    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="google_api_error">An error occurred with Google services</string>
    <string name="authentication_fail">Authentication failed</string>
    <string name="backup_activity_label"><![CDATA[Backup & Restore]]></string>
    <string name="please_login">Please login with your Google account to backup swim data</string>
    <string name="logged_in_message">You are logged in</string>
    <string name="performing_backup">In progress...</string>
    <string name="backup_restore_info">Use the Google Cloud to perform backup or restore of your data</string>
    <string name="task_completed">Task completed.</string>
    <string name="error_backup">Error performing backup. Backup file size limit is 5MB. Please try again later.</string>
    <string name="please_confirm">Please confirm</string>
    <string name="restore_confirm_message">Restoring the file from a backup will override any swim data now available on your device. Do you want to restore the backup?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_restore">Error restoring the backup. This can happen if you didn\'t save any backup before. Please try later.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">_</string>
    <string name="add_widget">Add widget</string>
    <string name="distance_km">KM</string>
    <string name="duration_houres">HOURS</string>
    <string name="btn_add_swim">Add a New Swimming</string>
    <string name="new_swim_title">Such a nice swim</string>
    <string name="new_swim_location">Some where there is water ;)</string>
    <string name="swim_data_downloaded">Swimming data downloaded to device</string>
    <string name="no_data_received">Did not receive any swimming data</string>
    <string name="swim_gps_track">GPS Track</string>
    <string name="swim_map_preview">Swimming map preview</string>
    <string name="swim_path_total_distance">%1$s meters - %2$s</string>

    <string name="gmap_api_key" translatable="false">AIzaSyBDBs5brrVKla-LKiFlTVI8BwqMby3OjSI</string>
    <string name="map_marker_default_position">Default Location (0,0)</string>
    <string name="error_storing_map_image">Error storing map image</string>
</resources>
